# unittest-parametrize

./: .pre-commit-config.yaml  CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg
requirements/: py37.txt  py38.txt  py39.txt  requirements.in
src/unittest_parametrize/: __init__.py
tests/: test_unittest_parametrize.py
tests/requirements/: py38.txt  py39.txt  requirements.in
